turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: not found: value i
	for (i <- 0 to i) {
                       ^